--- a/gondex.html
+++ b/gondex.html
@@ -3466,7 +3466,7 @@
     function main() {
         // if(keysPressed['l']){
 
-        canvas_context.clearRect(0, 0, canvas.height, canvas.height)  // refreshes the image
+        canvas_context.clearRect(0, 0, canvas.height+100, canvas.height)  // refreshes the image
         scaler.draw()
         spin1.draw()
         spin2.draw()
