--- a/gondex.html
+++ b/gondex.html
@@ -160,8 +160,17 @@
             let hypotenuse = (xdif * xdif) + (ydif * ydif)
             return Math.sqrt(hypotenuse)
         }
+        hypotenuseX() {
+            let xdif = this.object.y - this.target.y
+            let ydif = this.object.z - this.target.z
+            let hypotenuse = (xdif * xdif) + (ydif * ydif)
+            return Math.sqrt(hypotenuse)
+        }
         angleZ() {
             return Math.atan2(this.object.z - this.target.z, this.object.x - this.target.x)
+        }
+        angleX() {
+            return Math.atan2(this.object.y - this.target.y, this.object.z - this.target.z)
         }
 
         draw() {
@@ -1072,6 +1081,14 @@
                 canvas_context.strokeStyle = `rgb(${this.r + b.board.cstep},${this.g + b.board.cstep},${this.b + b.board.cstep})`
                 canvas_context.lineWidth = 1
                 canvas_context.strokeRect(this.sx - 3, this.sy - 3, 6, 6)
+                let rekt = new Rectangle(this.sx-.5, this.sy-.5, 7,7)
+                if(rekt.isPointInside(TIP_engine)){
+                canvas_context.strokeStyle ="black"
+                canvas_context.lineWidth = 2
+                canvas_context.fillStyle = `rgb(${this.r + b.board.cstep},${this.g + b.board.cstep},${this.b + b.board.cstep})`
+                    canvas_context.strokeText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
+                    canvas_context.fillText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
+                }
                 // canvas_context.beginPath();
                 // canvas_context.arc((this.x * 120) + 350, (this.y * 120) + 350, 10, 0, (Math.PI * 2), true)
                 // canvas_context.fillStyle = `rgb(${this.r},${this.g},${this.b})`
@@ -1111,6 +1128,10 @@
         spin2() {
 
             this.board.spin2()
+        }
+        spin3() {
+
+            this.board.spin3()
         }
         check(point, tile = -1, top = -1, kop = -1, eep = -1) {
 
@@ -3443,6 +3464,10 @@
 
             this.rotateY(-Math.PI / 16)
         }
+        spin3() {
+
+            this.rotateX(-Math.PI / 16)
+        }
         export2() {
             let out = ''
 
@@ -3509,10 +3534,17 @@
             // this.rotateY(-.00163)
             if (keysPressed['w']) {
                 // if(true){
-                this.rotateY(.053)
+                this.rotateX(.05)
             }
             if (keysPressed['s']) {
-                this.rotateY(-.051)
+                this.rotateX(-.05)
+            }
+            if (keysPressed['q']) {
+                // if(true){
+                this.rotateY(.05)
+            }
+            if (keysPressed['e']) {
+                this.rotateY(-.05)
             }
             // for (let t = 0; t < this.dots.length; t++) {
             //     // if(t < this.dots.length - (this.dots.length *.3 )){
@@ -3800,6 +3832,14 @@
                 this.dots[t].y = (-Math.sin(ang - angle)) * length
             }
         }
+        rotateX(angle) {
+            for (let t = 0; t < this.dots.length; t++) {
+                let ang = this.links[t].angleX()
+                let length = this.links[t].hypotenuseX()
+                this.dots[t].z = (-Math.cos(ang - angle)) * length
+                this.dots[t].y = (-Math.sin(ang - angle)) * length
+            }
+        }
     }
 
 
@@ -3930,6 +3970,10 @@
             if (spin2.isPointInside(TIP_engine)) {
                 b.spin2()
             }
+            if (spin3.isPointInside(TIP_engine)) {
+                b.spin3()
+            }
+            
             if (scaler.isPointInside(TIP_engine)) {
                 scale *= -1
             }
@@ -3957,11 +4001,12 @@
                 globalRoom = roombox.number
                 startgame = 2
             }
-            window.addEventListener('pointermove', continued_stimuli);
             window.focus();
         });
+
+        window.addEventListener('pointermove', continued_stimuli);
         window.addEventListener('pointerup', e => {
-            window.removeEventListener("pointermove", continued_stimuli);
+            // window.removeEventListener("pointermove", continued_stimuli);
         })
         function continued_stimuli(e) {
             FLEX_engine = canvas.getBoundingClientRect();
@@ -3986,6 +4031,7 @@
     let restart = new Rectangle(700, 400, 200, 50, "white")
     let spin1 = new Rectangle(50, 700, 200, 50, "green")
     let spin2 = new Rectangle(250, 700, 200, 50, "yellow")
+    let spin3 = new Rectangle(250, 750, 200, 50, "orange")
     let scaler = new Rectangle(500, 700, 200, 50, "white")
     let scale = -1
     let AI = -1
@@ -3998,6 +4044,7 @@
         scaler.draw()
         spin1.draw()
         spin2.draw()
+        spin3.draw()
         aiButton.draw()
         // if(AI == 1){
         difficultyButton.draw()
@@ -4008,6 +4055,9 @@
         canvas_context.fillStyle = "black"
         canvas_context.font = "30px comic sans ms"
         canvas_context.fillText("twirl", spin2.x + 20, spin2.y + 30)
+        canvas_context.fillStyle = "black"
+        canvas_context.font = "30px comic sans ms"
+        canvas_context.fillText("rotate", spin3.x + 20, spin3.y + 30)
         canvas_context.fillStyle = "black"
         canvas_context.font = "30px comic sans ms"
         canvas_context.fillText("scale", scaler.x + 20, scaler.y + 30)
