--- a/gondex.html
+++ b/gondex.html
@@ -1045,7 +1045,8 @@
                 canvas_context.stroke()
                 // if (this.marked == 1) {
                 canvas_context.fill()
-                // }    let rekt = new Rectangle(this.sx-.5, this.sy-.5, 7,7)
+                // }   
+                 let rekt = new Rectangle(this.sx-.5, this.sy-.5, 7,7)
                 if(rekt.isPointInside(TIP_engine)){
                 canvas_context.strokeStyle ="black"
                 canvas_context.lineWidth = 2
