--- a/gondex.html
+++ b/gondex.html
@@ -1050,6 +1050,7 @@
                 if(rekt.isPointInside(TIP_engine)){
                 canvas_context.strokeStyle ="black"
                 canvas_context.lineWidth = 2
+        canvas_context.font = "30px comic sans ms"
                 canvas_context.fillStyle = `rgb(${this.r + b.board.cstep},${this.g + b.board.cstep},${this.b + b.board.cstep})`
                     canvas_context.strokeText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
                     canvas_context.fillText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
@@ -1085,6 +1086,8 @@
                 if(rekt.isPointInside(TIP_engine)){
                 canvas_context.strokeStyle ="white"
                 canvas_context.lineWidth = 2
+
+        canvas_context.font = "30px comic sans ms"
                 canvas_context.fillStyle = `rgb(${this.r + b.board.cstep},${this.g + b.board.cstep},${this.b + b.board.cstep})`
                     canvas_context.strokeText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
                     canvas_context.fillText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
@@ -1100,6 +1103,8 @@
                 if(rekt.isPointInside(TIP_engine)){
                 canvas_context.strokeStyle ="black"
                 canvas_context.lineWidth = 2
+
+        canvas_context.font = "30px comic sans ms"
                 canvas_context.fillStyle = `rgb(${this.r + b.board.cstep},${this.g + b.board.cstep},${this.b + b.board.cstep})`
                     canvas_context.strokeText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
                     canvas_context.fillText(`(${this.k-b.board.sizeDown}, ${this.t-b.board.sizeDown}, ${this.e-b.board.sizeDown})`, TIP_engine.x + 10+(this.x*3), TIP_engine.y + 10+(this.y*3))
